<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="question_service">How was the service?</string>
    <string name="amazing_20_percent">Amazing! (20%)</string>
    <string name="good_18_percent">Good! (18%)</string>
    <string name="ok_15_percent">OK! (15%)</string>
    <string name="round_up">Round up tip?</string>
    <string name="calculate">Calculate?</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>